--- a/templates/assets/cuisine.html
+++ b/templates/assets/cuisine.html
@@ -338,20 +338,21 @@ tournee.commandes.forEach(commande => {
                                                 </div>
 
                                                 <div class="d-flex justify-content-between align-items-center my-3">
-                                                    <div class="flex-fill text-start">
-                                                        <button class="btn btn-primary" onclick="printEtiquettes(${tournee.tournee_id})">🖨️ étiquettes</button>
-                                                    </div>
-                                                    <div class="flex-fill text-center">
-                                                        ${
-                                                            tournee.commandes.some(cmd => cmd.cuisson_en_cours)
-                                                            ? ''
-                                                            : `<button id="btn-cuisson-${tournee.tournee_id}" class="btn btn-warning" onclick="demarrerCuisson(${tournee.tournee_id})">🔥 On commence</button>`
-                                                        }
-                                                    </div>
-                                                    <div class="flex-fill text-end">
-                                                        <button class="btn btn-success" onclick="openConfirmationModal(${tournee.tournee_id})">C'est prêt 👍🏽</button>
-                                                    </div>
-                                                </div>
+                                            <div class="flex-fill text-start">
+                                                ${messageButtonHTML}
+                                                <button class="btn btn-primary" onclick="printEtiquettes(${tournee.tournee_id})">🖨️ étiquettes</button>
+                                            </div>
+                                            <div class="flex-fill text-center">
+                                                ${
+                                                    tournee.commandes.some(cmd => cmd.cuisson_en_cours)
+                                                    ? ''
+                                                    : `<button id="btn-cuisson-${tournee.tournee_id}" class="btn btn-warning" onclick="demarrerCuisson(${tournee.tournee_id})">🔥 On commence</button>`
+                                                }
+                                            </div>
+                                            <div class="flex-fill text-end">
+                                                <button class="btn btn-success" onclick="openConfirmationModal(${tournee.tournee_id})">C'est prêt 👍🏽</button>
+                                            </div>
+                                        </div>
                                             </div>
                                         </div>
                                     </div>
